--- a/life_cycle/global.css
+++ b/life_cycle/global.css
@@ -1,4 +1,13 @@
 /* Full-viewport, no scrollbars */
+
+@font-face {
+  font-family: 'MomoTrustDisplay';
+  src: url('./assets/MomoTrustDisplay-Regular.ttf') format('truetype');
+  font-weight: 800;
+  font-style: normal;
+  font-display: swap;
+}
+
 html,
 body {
   margin: 0;
